--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
         flex-direction: column;
     }
 
+    
     .headerImage {
         object-fit: contain;
         height: 12rem;
@@ -19,13 +20,14 @@
 
     @media only screen and (max-width: 600px) {
         .headerImage {
-            margin-left: 3rem;
             height: 12rem;
+            margin-left: 0rem;
         }
     }
 
     .navigationList {
         margin: 0;
+        padding: 0;
         list-style-type: none;
         display: flex;
         gap: 3rem;
@@ -33,6 +35,7 @@
         justify-content: center;
         font-size: 1.1rem;
     }
+
 
     @media only screen and (max-width: 600px) {
         .navigationList {
@@ -89,7 +92,6 @@
         margin: 0 0 0 0.75rem;
         letter-spacing: 1px;
     }
-
 </style>
 <body>
     <header class="portfolioHeader">
