--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,14 @@
 
     @media only screen and (max-width: 600px) {
         .headerImage {
-            margin-left: 3rem;
             height: 12rem;
+            margin-left: 0rem;
         }
     }
 
     .navigationList {
         margin: 0;
+        padding: 0;
         list-style-type: none;
         display: flex;
         gap: 3rem;
@@ -33,6 +34,7 @@
         justify-content: center;
         font-size: 1.1rem;
     }
+
 
     @media only screen and (max-width: 600px) {
         .navigationList {
