--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 
     @media only screen and (max-width: 600px) {
         .headerImage {
-            margin-left: 3rem;
             height: 12rem;
+            margin-left: 0rem;
         }
     }
 
     .navigationList {
         margin: 0;
+        padding: 0;
         list-style-type: none;
         display: flex;
         gap: 3rem;
@@ -65,6 +66,7 @@
         list-style-type: none;
         max-width: 1200px;
         margin: auto;
+        padding: 0;
     }
 
     @media only screen and (max-width: 600px) {
