--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
         margin: 0;
         color: #444;
     }
+
+    @media only screen and (max-width: 600px) {
+        .workItem__title {
+            display: none;
+        }
+    }
+
 </style>
 <body>
     <header class="portfolioHeader">
