Update contact text to my LinkedIn

--- a/contact.html
+++ b/contact.html
@@ -213,7 +213,7 @@
             <section class="contactContentContainer">
                 <p class="contactContent__paragraph">For business inquiries you can mail me at <a class="contactContent__link yellow" href="mailto:naissketching@gmail.com">naissketching@gmail.com</a></p>
                 <p class="contactContent__paragraph">If you would like to see more of my work please check out
-                    my <a class="contactContent__link teal" href="https://www.instagram.com/naissketching/">Instagram page</a>, <a class="contactContent__link teal" href="https://www.behance.net/naissketching">Behance</a> and on <a class="contactContent__link teal" href="https://www.linkedin.com/in/ana%C3%AFs-ng-742117183/">LinkedIn.</a></p>
+                    my <a class="contactContent__link teal" href="https://www.instagram.com/naissketching/">Instagram page</a>, <a class="contactContent__link teal" href="https://www.behance.net/naissketching">Behance</a> and my <a class="contactContent__link teal" href="https://www.linkedin.com/in/ana%C3%AFs-ng-742117183/">LinkedIn.</a></p>
                 <p class="contactContent__paragraph teal">Let’s chat</p>
                 <form class="contactForm">
                     <section class="contactForm__inputContainer">
