--- a/about.html
+++ b/about.html
@@ -92,6 +92,16 @@
         margin: 0 0 0 0.75rem;
         letter-spacing: 1px;
     }
+
+    .footer {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-size: 1rem;
+        margin: 6rem 0 4rem 0;
+        padding: 0 3rem;
+        color: #666;
+        text-align: center;
+        font-weight: 900;
+    }
 </style>
 <body>
     <header class="portfolioHeader">
@@ -118,5 +128,6 @@
             </section>
         </div>
     </main>
+    <footer class="footer">© Anais Ng - All rights reserved.</footer>
 </body>
 </html>
