--- a/contact.html
+++ b/contact.html
@@ -192,6 +192,15 @@
         transform: scale(1.05);
     }
 
+    .footer {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-size: 1rem;
+        margin: 6rem 0 4rem 0;
+        padding: 0 3rem;
+        color: #666;
+        text-align: center;
+        font-weight: 900;
+    }
 </style>
 <body>
     <header class="portfolioHeader">
@@ -231,5 +240,6 @@
             </section>
         </div>
     </main>
+    <footer class="footer">© Anais Ng - All rights reserved.</footer>
 </body>
 </html>
