--- a/illustrations.html
+++ b/illustrations.html
@@ -95,6 +95,16 @@
         position: absolute;
         background-color: rgba(255, 255, 255, 0.6);
     }
+
+    .footer {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-size: 1rem;
+        margin: 6rem 0 4rem 0;
+        padding: 0 3rem;
+        color: #666;
+        text-align: center;
+        font-weight: 900;
+    }
 </style>
 <body>
     <header class="portfolioHeader">
@@ -141,5 +151,6 @@
             </ul>
         </section>
     </main>
+    <footer class="footer">© Anais Ng - All rights reserved.</footer>
 </body>
 </html>
