--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         grid-template-columns: auto auto auto;
         list-style-type: none;
         max-width: 1200px;
-        margin: auto;
+        margin: 2rem auto 0 auto;
         padding: 0;
     }
 
@@ -129,6 +129,15 @@
         }
     }
 
+    .footer {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-size: 1rem;
+        margin: 6rem 0 4rem 0;
+        padding: 0 3rem;
+        color: #666;
+        text-align: center;
+        font-weight: 900;
+    }
 </style>
 <body>
     <header class="portfolioHeader">
@@ -193,5 +202,6 @@
             </ul>
         </section>
     </main>
+    <footer class="footer">© Anais Ng - All rights reserved.</footer>
 </body>
 </html>
