--- a/contact.html
+++ b/contact.html
@@ -224,7 +224,8 @@
                 <p class="contactContent__paragraph">If you would like to see more of my work please check out
                     my <a class="contactContent__link teal" href="https://www.instagram.com/naissketching/">Instagram page</a>, <a class="contactContent__link teal" href="https://www.behance.net/naissketching">Behance</a> and my <a class="contactContent__link teal" href="https://www.linkedin.com/in/ana%C3%AFs-ng-742117183/">LinkedIn.</a></p>
                 <p class="contactContent__paragraph teal">Let’s chat</p>
-                <form class="contactForm">
+                <form class="contactForm" action="https://formspree.io/f/xvgzzrpo"
+                method="POST">
                     <section class="contactForm__inputContainer">
                         <label class="contactForm__emailLabel" for="email">Email <span class="required">(required)</span></label>
                         <input class="contactForm__emailValue" name="email" id="email" type="text"/>
