Remove translucent background on small screens

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nais sketching</title>
+    <title>Naissketching - Contact</title>
 </head>
 <style>
+    *,*::before, *::after {
+        box-sizing: border-box;
+    }
+
     .portfolioHeader {
         display: flex;
         flex-direction: column;
